Fixing text align

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -22,7 +22,7 @@
     text-align: center;
   }
   .container div.menu {
-    grid-area: center;
+    grid-area: menu;
   }
   .container div.content {
     grid-area: content;
